--- a/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
+++ b/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
@@ -383,7 +383,7 @@
     <Content Include="Scripts\jquery.ui.touch-punch.min.js" />
     <Content Include="Scripts\menu.js" />
     <Content Include="Views\Account\AboutHRPro.aspx" />
-    <Content Include="Views\Account\Error.aspx" />
+    <Content Include="Views\Account\Error.ascx" />
     <Content Include="Views\Account\ForcedPasswordChange.aspx" />
     <Content Include="Views\Account\Login.aspx" />
     <Content Include="Views\Account\Message.ascx" />
