--- a/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
+++ b/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
@@ -405,6 +405,9 @@
     <Content Include="Views\Home\Menu.ascx" />
     <Content Include="HTMLPage1.htm" />
     <Content Include="Views\Home\pcconfiguration.ascx" />
+    <Content Include="Views\Home\poll.ascx" />
+    <Content Include="Views\Home\pollmessage.ascx" />
+    <Content Include="Views\Home\refresh.ascx" />
     <Content Include="Views\Home\Util_CustomReportChilds.aspx" />
     <Content Include="Views\Home\Util_Def_CustomReports.ascx" />
     <Content Include="Views\Home\Util_EmailSelection.aspx" />
