--- a/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
+++ b/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
@@ -408,17 +408,18 @@
     <Content Include="Views\Home\pcconfiguration.ascx" />
     <Content Include="Views\Home\poll.ascx" />
     <Content Include="Views\Home\pollmessage.ascx" />
+    <Content Include="Views\Home\progress.ascx" />
     <Content Include="Views\Home\refresh.ascx" />
     <Content Include="Views\Home\Util_CustomReportChilds.aspx" />
     <Content Include="Views\Home\Util_Def_Crosstabs.ascx" />
     <Content Include="Views\Home\Util_Def_CustomReports.ascx" />
     <Content Include="Views\Home\Util_EmailSelection.aspx" />
     <Content Include="Views\Home\Util_RecordSelection.aspx" />
-    <Content Include="Views\Home\util_run.aspx" />
-    <Content Include="Views\Home\util_run_customreports.aspx" />
-    <Content Include="Views\Home\util_run_customreportsData.aspx" />
-    <Content Include="Views\Home\util_run_customreportsMain.aspx" />
-    <Content Include="Views\Home\util_run_promptedvalues.aspx" />
+    <Content Include="Views\Home\util_run.ascx" />
+    <Content Include="Views\Home\util_run_customreports.ascx" />
+    <Content Include="Views\Home\util_run_customreportsData.ascx" />
+    <Content Include="Views\Home\util_run_customreportsMain.ascx" />
+    <Content Include="Views\Home\util_run_promptedvalues.ascx" />
     <Content Include="Views\Home\Util_SortOrderSelection.aspx" />
     <Content Include="Views\Home\PasswordChange.ascx" />
     <Content Include="Views\Home\Util_Validate_Crosstabs.ascx" />
