JIRA-2783 - Code stubs for expression builder added.

--- a/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
+++ b/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
@@ -414,6 +414,8 @@
     <Content Include="Views\Home\Util_CustomReportChilds.aspx" />
     <Content Include="Views\Home\Util_Def_Crosstabs.ascx" />
     <Content Include="Views\Home\Util_Def_CustomReports.ascx" />
+    <Content Include="Views\Home\util_def_exprcomponent.ascx" />
+    <Content Include="Views\Home\util_def_expression.ascx" />
     <Content Include="Views\Home\Util_EmailSelection.aspx" />
     <Content Include="Views\Home\Util_RecordSelection.aspx" />
     <Content Include="Views\Home\util_run.ascx" />
@@ -423,8 +425,11 @@
     <Content Include="Views\Home\util_run_promptedvalues.ascx" />
     <Content Include="Views\Home\Util_SortOrderSelection.aspx" />
     <Content Include="Views\Home\PasswordChange.ascx" />
+    <Content Include="Views\Home\util_test_expression.aspx" />
+    <Content Include="Views\Home\util_test_expression_pval.aspx" />
     <Content Include="Views\Home\Util_Validate_Crosstabs.ascx" />
     <Content Include="Views\Home\util_validate_customreports.aspx" />
+    <Content Include="Views\Home\util_validate_expression.aspx" />
     <Content Include="Views\Shared\ctl_ASRIntranetPrintFunctions.ascx" />
     <Content Include="Views\Shared\Util_Def_CustomReports\grdaccess.ascx" />
     <Content Include="Views\Shared\gotoWork.ascx" />
