--- a/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
+++ b/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
@@ -410,6 +410,7 @@
     <Content Include="Views\Home\poll.ascx" />
     <Content Include="Views\Home\pollmessage.ascx" />
     <Content Include="Views\Home\progress.ascx" />
+    <Content Include="Views\Home\recordEdit.ascx" />
     <Content Include="Views\Home\refresh.ascx" />
     <Content Include="Views\Home\Util_CustomReportChilds.aspx" />
     <Content Include="Views\Home\Util_Def_Crosstabs.ascx" />
