JIRA-2786 (part of)

--- a/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
+++ b/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
@@ -430,6 +430,7 @@
     <Content Include="Views\Home\Util_Def_CustomReports.ascx" />
     <Content Include="Views\Home\util_def_exprcomponent.ascx" />
     <Content Include="Views\Home\util_def_expression.ascx" />
+    <Content Include="Views\Home\util_delete.ascx" />
     <Content Include="Views\Home\util_dialog_expression.aspx" />
     <Content Include="Views\Home\Util_EmailSelection.aspx" />
     <Content Include="Views\Home\Util_RecordSelection.aspx" />
