JIRA-2795 - Picklist conversion (part of)

--- a/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
+++ b/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
@@ -592,6 +592,7 @@
     <Content Include="Views\Home\Util_Validate_Crosstabs.ascx" />
     <Content Include="Views\Home\util_validate_customreports.aspx" />
     <Content Include="Views\Home\util_validate_expression.aspx" />
+    <Content Include="Views\Home\util_validate_picklist.aspx" />
     <Content Include="Views\Shared\ctl_ASRIntranetPrintFunctions.ascx" />
     <Content Include="Views\Shared\gotoOption.ascx" />
     <Content Include="Views\Shared\Util_Def_CustomReports\grdaccess.ascx" />
