--- a/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
+++ b/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
@@ -563,7 +563,7 @@
     <Content Include="Views\Home\pcconfiguration.ascx" />
     <Content Include="Views\Home\picklistSelection.ascx" />
     <Content Include="Views\Home\picklistSelectionData.ascx" />
-    <Content Include="Views\Home\picklistSelectionMain.aspx" />
+    <Content Include="Views\Home\picklistSelectionMain.ascx" />
     <Content Include="Views\Home\poll.ascx" />
     <Content Include="Views\Home\pollmessage.ascx" />
     <Content Include="Views\Home\progress.ascx" />
@@ -577,7 +577,7 @@
     <Content Include="Views\Home\util_def_picklist.ascx" />
     <Content Include="Views\Home\util_delete.ascx" />
     <Content Include="Views\Home\util_dialog_expression.aspx" />
-    <Content Include="Views\Home\util_dialog_picklist.aspx" />
+    <Content Include="Views\Home\util_dialog_picklist.ascx" />
     <Content Include="Views\Home\Util_EmailSelection.aspx" />
     <Content Include="Views\Home\Util_RecordSelection.aspx" />
     <Content Include="Views\Home\util_run.ascx" />
@@ -592,7 +592,7 @@
     <Content Include="Views\Home\Util_Validate_Crosstabs.ascx" />
     <Content Include="Views\Home\util_validate_customreports.aspx" />
     <Content Include="Views\Home\util_validate_expression.aspx" />
-    <Content Include="Views\Home\util_validate_picklist.aspx" />
+    <Content Include="Views\Home\util_validate_picklist.ascx" />
     <Content Include="Views\Shared\ctl_ASRIntranetPrintFunctions.ascx" />
     <Content Include="Views\Shared\gotoOption.ascx" />
     <Content Include="Views\Shared\Util_Def_CustomReports\grdaccess.ascx" />
