RecEdit Changes - added working pattern. Added receddit.js

--- a/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
+++ b/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
@@ -348,6 +348,7 @@
     </Content>
     <Content Include="Pictures\ProfilePhotos\dAvery.jpg" />
     <Content Include="Pictures\ProfilePhotos\mWORTHING.jpg" />
+    <Content Include="Scripts\FormScripts\recordEdit.js" />
     <Content Include="Scripts\FormScripts\Util_Def_CustomReports.js" />
     <Content Include="Scripts\jquery-1.8.3.js" />
     <Content Include="Scripts\jquery-ui-1.9.2.custom.js" />
