--- a/Web Apps/DMI.NET/DMI.NET/Web.config
+++ b/Web Apps/DMI.NET/DMI.NET/Web.config
@@ -19,6 +19,7 @@
         <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       </assemblies>
     </compilation>
+    <httpRuntime requestValidationMode="2.0" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880"/>
     </authentication>
