--- a/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
+++ b/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
@@ -219,6 +219,7 @@
     <Content Include="Content\images\ui-icons_ffffff_256x240.png" />
     <Content Include="Content\jquery-ui-1.9.2.custom.css" />
     <Content Include="Content\jquery.gridster.css" />
+    <Content Include="Scripts\jquery.jqGrid.min.js" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -341,6 +342,7 @@
     <Content Include="Content\themes\jqueryui\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\jqueryui\minified\jquery.ui.theme.min.css" />
     <Content Include="Content\themes\jqueryui\minified\jquery.ui.tooltip.min.css" />
+    <Content Include="Content\ui.jqgrid.css" />
     <Content Include="HTMLPage3.htm" />
     <Content Include="HTMLPage2.htm" />
     <Content Include="Include\exprmenu.htm">
@@ -353,6 +355,7 @@
     <Content Include="Scripts\jquery-1.8.3.js" />
     <Content Include="Scripts\jquery-ui-1.9.2.custom.js" />
     <Content Include="Scripts\jquery-ui-1.9.2.custom.min.js" />
+    <Content Include="Scripts\jquery.jqGrid.src.js" />
     <Content Include="Scripts\jsTree\theme\apple\bg.jpg" />
     <Content Include="Scripts\jsTree\theme\apple\d.png" />
     <Content Include="Scripts\jsTree\theme\apple\dot_for_ie.gif" />
