LPK File added to mark ActiveX controls as safe outside Dev environment.

--- a/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
+++ b/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
@@ -139,6 +139,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="lpks\ssmain.lpk" />
     <None Include="_bin_deployableAssemblies\Microsoft.Web.Infrastructure.dll" />
     <None Include="_bin_deployableAssemblies\System.Web.WebPages.Razor.dll" />
     <None Include="_bin_deployableAssemblies\System.Web.WebPages.dll" />
