--- a/Components/Fusion/Fusion.Connector.OpenHR/Fusion.Connector.OpenHR.csproj
+++ b/Components/Fusion/Fusion.Connector.OpenHR/Fusion.Connector.OpenHR.csproj
@@ -80,8 +80,24 @@
   <ItemGroup>
     <Compile Include="Configuration\FusionConfiguration.cs" />
     <Compile Include="Configuration\IFusionConfiguration.cs" />
-    <Compile Include="DatabaseAccess\StaffRecord.cs" />
-    <Compile Include="DatabaseAccess\StaffRecordDb.cs" />
+    <Compile Include="Database\DatabaseAccess.cs" />
+    <Compile Include="MessageComponents\Component\Contract.cs" />
+    <Compile Include="MessageComponents\Component\LegalDocument.cs" />
+    <Compile Include="MessageComponents\Component\Picture.cs" />
+    <Compile Include="MessageComponents\Component\Skill.cs" />
+    <Compile Include="MessageComponents\Component\TimesheetPerContract.cs" />
+    <Compile Include="MessageComponents\Data\StaffContractChangeData.cs" />
+    <Compile Include="MessageComponents\Data\StaffLegalDocumentChangeData.cs" />
+    <Compile Include="MessageComponents\Data\StaffPictureChangeData.cs" />
+    <Compile Include="MessageComponents\Data\StaffSkillChangeData.cs" />
+    <Compile Include="MessageComponents\Data\StaffTimeSheetPerContractSubmission.cs" />
+    <Compile Include="MessageComponents\Enums\Gender.cs" />
+    <Compile Include="MessageComponents\Enums\ImageType.cs" />
+    <Compile Include="MessageComponents\Enums\LegalDocumentTypes.cs" />
+    <Compile Include="MessageComponents\Enums\RecordStatusRescindable.cs" />
+    <Compile Include="MessageComponents\Enums\EmployeeType.cs" />
+    <Compile Include="MessageComponents\Component\Contact.cs" />
+    <Compile Include="MessageComponents\Component\Address.cs" />
     <Compile Include="EndpointConfig.cs" />
     <Compile Include="Installer.cs">
       <SubType>Component</SubType>
@@ -89,19 +105,39 @@
     <Compile Include="Installer.Designer.cs">
       <DependentUpon>Installer.cs</DependentUpon>
     </Compile>
+    <Compile Include="MessageComponents\Enums\RecordStatusTransactional.cs" />
+    <Compile Include="MessageComponents\StaffChange.cs" />
+    <Compile Include="MessageComponents\StaffContactChange.cs" />
+    <Compile Include="MessageComponents\Data\StaffContactChangeData.cs" />
+    <Compile Include="MessageComponents\StaffContractChange.cs" />
+    <Compile Include="MessageComponents\StaffLegalDocumentChange.cs" />
+    <Compile Include="MessageComponents\StaffPictureChange.cs" />
+    <Compile Include="MessageComponents\StaffSkillChange.cs" />
+    <Compile Include="MessageComponents\StaffTimesheetPerContractSubmission.cs" />
     <Compile Include="MessageTypes.cs" />
-    <Compile Include="Messaging\BaseMessageHandler.cs" />
-    <Compile Include="Messaging\GenericMessageHandler.cs" />
-    <Compile Include="Messaging\GenericMessageOutboundFilter.cs" />
+    <Compile Include="Messaging\Base\BaseMessageHandler.cs" />
+    <Compile Include="Messaging\Obsolete\GenericMessageHandler.cs" />
+    <Compile Include="Messaging\Base\GenericMessageOutboundFilter.cs" />
+    <Compile Include="MessageComponents\Data\StaffChangeData.cs" />
     <Compile Include="Messaging\StaffChange\StaffChangeMessageHandler.cs" />
     <Compile Include="Messaging\StaffChange\StaffChangeMessageSchemaValidator.cs" />
     <Compile Include="Messaging\StaffChange\StaffChangeMessageSender.cs" />
     <Compile Include="Messaging\StaffChange\StaffMessageBuilder.cs" />
-    <Compile Include="Messaging\StaffChange\Staff.cs" />
-    <Compile Include="Messaging\staffLegalDocument.cs" />
-    <Compile Include="Messaging\TrackingMessageSender.cs" />
-    <Compile Include="Messaging\GenericMessageBuilder.cs" />
-    <Compile Include="Messaging\GenericMessageSender.cs" />
+    <Compile Include="MessageComponents\Component\Staff.cs" />
+    <Compile Include="Messaging\StaffContactChange\StaffContactChangeMessageBuilder.cs" />
+    <Compile Include="Messaging\StaffContactChange\StaffContactChangeMessageSchemaValidator.cs" />
+    <Compile Include="Messaging\StaffContractChange\StaffContractChangeMessageSchemaValidator.cs" />
+    <Compile Include="Messaging\Base\TrackingMessageSender.cs" />
+    <Compile Include="Messaging\Obsolete\GenericMessageBuilder.cs" />
+    <Compile Include="Messaging\Obsolete\GenericMessageSender.cs" />
+    <Compile Include="Messaging\StaffLegalDocumentChange\StaffLegalDocumentChangeMessageBuilder.cs" />
+    <Compile Include="Messaging\StaffLegalDocumentChange\StaffLegalDocumentChangeMessageSender.cs" />
+    <Compile Include="Messaging\StaffLegalDocumentChange\StaffLegalDocumentChangeSchemaValidator.cs" />
+    <Compile Include="Messaging\StaffPictureChange\StaffPictureChangeMessageHandler.cs" />
+    <Compile Include="Messaging\StaffPictureChange\staffPictureChangeMessageBuilder.cs" />
+    <Compile Include="Messaging\StaffPictureChange\StaffPictureChangeMessageSchemaValidator.cs" />
+    <Compile Include="Messaging\StaffSkillChange\StaffSkillChangeMessageSchemaValidator.cs" />
+    <Compile Include="Messaging\StaffTimesheetPerContractSubmission\StaffTimesheetPerContractSubmissionSchemaValidator.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
