First release to QA

--- a/Components/Fusion/Fusion.Connector.OpenHR/App.config
+++ b/Components/Fusion/Fusion.Connector.OpenHR/App.config
@@ -35,23 +35,23 @@
       <add Messages="Fusion.Messages.General.LogTranslationMessage, Fusion.Messages.General" Endpoint="fusion.logservice"/>
       
       <!--Multi master messages-->
-      <add Messages="Fusion.Messages.SocialCare.StaffChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02@coa.local"/>
-      <add Messages="Fusion.Messages.SocialCare.StaffChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02@coa.local"/>
+      <add Messages="Fusion.Messages.SocialCare.StaffChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local"/>
+      <add Messages="Fusion.Messages.SocialCare.StaffChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local"/>
 
       <add Messages="Fusion.Messages.SocialCare.StaffPictureChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@10.14.1.22" />
       <add Messages="Fusion.Messages.SocialCare.StaffPictureChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@10.14.1.22" />
       
-      <add Messages="Fusion.Messages.SocialCare.StaffContractChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02@coa.local" />
-      <add Messages="Fusion.Messages.SocialCare.StaffContractChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02@coa.local" />
+      <add Messages="Fusion.Messages.SocialCare.StaffContractChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
+      <add Messages="Fusion.Messages.SocialCare.StaffContractChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
 
-      <add Messages="Fusion.Messages.SocialCare.StaffSkillChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02@coa.local" />
-      <add Messages="Fusion.Messages.SocialCare.StaffSkillChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02@coa.local" />
+      <add Messages="Fusion.Messages.SocialCare.StaffSkillChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
+      <add Messages="Fusion.Messages.SocialCare.StaffSkillChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
 
-      <add Messages="Fusion.Messages.SocialCare.StaffLegalDocumentChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02@coa.local" />
-      <add Messages="Fusion.Messages.SocialCare.StaffLegalDocumentChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02@coa.local" />
+      <add Messages="Fusion.Messages.SocialCare.StaffLegalDocumentChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
+      <add Messages="Fusion.Messages.SocialCare.StaffLegalDocumentChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
 
-      <add Messages="Fusion.Messages.SocialCare.StaffContactChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02@coa.local" />
-      <add Messages="Fusion.Messages.SocialCare.StaffContactChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02@coa.local" />
+      <add Messages="Fusion.Messages.SocialCare.StaffContactChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
+      <add Messages="Fusion.Messages.SocialCare.StaffContactChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
 
       <!--Publish messages-->
       <!--<add Messages="Fusion.Messages.SocialCare.StaffHolidayBalanceRemainingChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.connector.openhr@127.0.0.1" />-->
@@ -63,12 +63,12 @@
 
   <SubscriptionConfig>
     <subscribe type="Fusion.Messages.SocialCare.StaffChangeMessage, Fusion.Messages.SocialCare"/>
-    <!--<subscribe type="Fusion.Messages.SocialCare.StaffContractChangeMessage, Fusion.Messages.SocialCare" />    
+    <subscribe type="Fusion.Messages.SocialCare.StaffContractChangeMessage, Fusion.Messages.SocialCare" />    
     <subscribe type="Fusion.Messages.SocialCare.StaffPictureChangeMessage, Fusion.Messages.SocialCare" />   
     <subscribe type="Fusion.Messages.SocialCare.StaffSkillChangeMessage, Fusion.Messages.SocialCare" />
-    <subscribe type="Fusion.Messages.SocialCare.StaffLegalDocumentChangeMessage, Fusion.Messages.SocialCare" />-->
+    <subscribe type="Fusion.Messages.SocialCare.StaffLegalDocumentChangeMessage, Fusion.Messages.SocialCare" />
     <!--    <subscribe type="Fusion.Messages.SocialCare.StaffTimeSheetPerContractSubmissionMessage, Fusion.Messages.SocialCare" /> -->
-    <!--<subscribe type="Fusion.Messages.SocialCare.StaffContactChangeMessage, Fusion.Messages.SocialCare" />-->
+    <subscribe type="Fusion.Messages.SocialCare.StaffContactChangeMessage, Fusion.Messages.SocialCare" />
   </SubscriptionConfig>
 
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="error"/>
